# SourceMod-Websockets

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile
.github/workflows/: cmake.yml
scripting/: websocket_test.smx  websocket_test.sp
scripting/include/: websocket.inc
src/: event_loop.cpp  event_loop.hpp  extension.cpp  extension.hpp  smn_json.cpp  smn_json.hpp  smn_websocket.cpp  smn_websocket.hpp  smsdk_config.h  smsdk_ext.h  websocket_connection.cpp  websocket_connection.hpp  websocket_connection_base.cpp  websocket_connection_base.hpp  websocket_connection_ssl.cpp  websocket_connection_ssl.hpp
